[package]
name         = "esp-idf-part"
version      = "0.5.0"
authors      = ["Jesse Braham <jesse@beta7.io>"]
edition      = "2021"
rust-version = "1.71"
description  = "A library for parsing and generating ESP-IDF partition tables"
repository   = "https://github.com/esp-rs/esp-idf-part"
license      = "MIT OR Apache-2.0"
keywords     = ["esp-idf", "partition", "partition-table"]
categories   = ["embedded", "parsing"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv         = { version = "1.3.0",   optional = true }
deku        = { version = "0.17.0",  optional = true }
heapless    = { version = "0.8.0",                            features = ["serde"]}
md5         = { version = "0.7.0",   default-features = false }
parse_int   = { version = "0.6.0",   optional = true }
regex       = { version = "1.10.3",   optional = true }
serde       = { version = "1.0.196", default-features = false, features = ["derive"] }
serde_plain = "1.0.2"
strum       = { version = "0.26.1",  default-features = false, features = ["derive"] }
thiserror   = { version = "1.0.57",  optional = true }

[features]
default = ["std"]
std     = ["csv", "deku", "md5/std", "parse_int", "regex", "serde/std", "strum/std", "thiserror"]
