[package]
name         = "esp-idf-part"
version      = "0.5.0"
authors      = ["Jesse Braham <jesse@beta7.io>"]
edition      = "2021"
rust-version = "1.71"
description  = "A library for parsing and generating ESP-IDF partition tables"
repository   = "https://github.com/esp-rs/esp-idf-part"
license      = "MIT OR Apache-2.0"
keywords     = ["esp-idf", "partition", "partition-table"]
categories   = ["embedded", "parsing"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv         = "1.3.1"
deku        = "0.18.1"
md-5        = { version = "0.10.6", default-features = false }
parse_int   = "0.6.0"
regex       = "1.11.1"
serde       = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_plain = "1.0.2"
strum       = { version = "0.27.1", default-features = false, features = ["derive"] }
thiserror   = "2.0.12"
