[package]
name         = "esp-idf-part"
version      = "0.6.0"
authors      = ["Jesse Braham <jesse@beta7.io>"]
edition      = "2024"
rust-version = "1.85"
description  = "A library for parsing and generating ESP-IDF partition tables"
repository   = "https://github.com/esp-rs/esp-idf-part"
license      = "MIT OR Apache-2.0"
keywords     = ["esp-idf", "partition", "partition-table"]
categories   = ["embedded", "parsing"]

[dependencies]
bitflags    = { version = "2.9.0", features = ["serde"] }
csv         = "1.3.1"
deku        = "0.18.1"
md-5        = "0.10.6"
parse_int   = "0.9.0"
regex       = "1.11.1"
serde       = { version = "1.0.219", features = ["derive"] }
serde_plain = "1.0.2"
strum       = { version = "0.27.1", features = ["derive"] }
thiserror   = "2.0.12"
